crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D102_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D102 Missing docstring in public method
  --> D.py:23:9
   |
22 |     @expect('D102: Missing docstring in public method')
23 |     def method(self=None):
   |         ^^^^^^
24 |         pass

D102 Missing docstring in public method
  --> D.py:56:9
   |
55 |     @expect('D102: Missing docstring in public method')
56 |     def __new__(self=None):
   |         ^^^^^^^
57 |         pass

D102 Missing docstring in public method
  --> D.py:68:9
   |
67 |     @expect('D102: Missing docstring in public method')
68 |     def __call__(self=None, x=None, y=None, z=None):
   |         ^^^^^^^^
69 |         pass

D102 Missing docstring in public method
   --> D.py:650:9
    |
648 | class StatementOnSameLineAsDocstring:
649 |     "After this docstring there's another statement on the same line separated by a semicolon." ; priorities=1
650 |     def sort_services(self):
    |         ^^^^^^^^^^^^^
651 |         pass

D102 Missing docstring in public method
   --> D.py:659:9
    |
657 | class CommentAfterDocstring:
658 |     "After this docstring there's a comment."  # priorities=1
659 |     def sort_services(self):
    |         ^^^^^^^^^^^^^
660 |         pass
