crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D102_setter.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D102 Missing docstring in public method
  --> setter.py:16:9
   |
15 |     @foo
16 |     def foo(self, value: str) -> None:
   |         ^^^
17 |         pass
