crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D105_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D105 Missing docstring in magic method
  --> D.py:64:9
   |
63 |     @expect('D105: Missing docstring in magic method')
64 |     def __str__(self=None):
   |         ^^^^^^^
65 |         pass
