crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D200_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D200 [*] One-line docstring should fit on one line
   --> D.py:129:5
    |
127 |   @expect('D212: Multi-line docstring summary should start at the first line')
128 |   def asdlkfasd():
129 | /     """
130 | |     Wrong.
131 | |     """
    | |_______^
help: Reformat to one line
    |
128 | def asdlkfasd():
    -     """
    -     Wrong.
    -     """
129 +     """Wrong."""
130 |
    |
note: This is an unsafe fix and may change runtime behavior

D200 [*] One-line docstring should fit on one line
   --> D.py:597:5
595 |   @expect('D212: Multi-line docstring summary should start at the first line')
596 |   def one_liner():
597 | /     """
598 | |
599 | |     Wrong."""
    | |_____________^
help: Reformat to one line
    |
596 | def one_liner():
    -     """
    -
    -     Wrong."""
597 +     """Wrong."""
598 |
    |
note: This is an unsafe fix and may change runtime behavior

D200 [*] One-line docstring should fit on one line
   --> D.py:606:5
604 |   @expect('D212: Multi-line docstring summary should start at the first line')
605 |   def one_liner():
606 | /     r"""Wrong.
607 | |
608 | |     """
    | |_______^
help: Reformat to one line
    |
605 | def one_liner():
    -     r"""Wrong.
    -
    -     """
606 +     r"""Wrong."""
607 |
    |
note: This is an unsafe fix and may change runtime behavior

D200 One-line docstring should fit on one line
   --> D.py:615:5
613 |   @expect('D212: Multi-line docstring summary should start at the first line')
614 |   def one_liner():
615 | /     """Wrong."
616 | |
617 | |     """
    | |_______^
help: Reformat to one line

D200 One-line docstring should fit on one line
   --> D.py:624:5
622 |   @expect('D212: Multi-line docstring summary should start at the first line')
623 |   def one_liner():
624 | /     """
625 | |
626 | |     "Wrong."""
    | |______________^
help: Reformat to one line

D200 One-line docstring should fit on one line
   --> D.py:645:5
    |
644 |   def single_line_docstring_with_an_escaped_backslash():
645 | /     "\
646 | |     "
    | |_____^
647 |
648 |   class StatementOnSameLineAsDocstring:
help: Reformat to one line
