crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D201_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D201 [*] No blank lines allowed before function docstring (found 1)
   --> D.py:137:5
135 | def leading_space():
136 |
137 |     """Leading space."""
    |     ^^^^^^^^^^^^^^^^^^^^
help: Remove blank line(s) before function docstring
    |
135 | def leading_space():
    -
136 |     """Leading space."""
    |

D201 [*] No blank lines allowed before function docstring (found 1)
   --> D.py:151:5
    |
149 | def trailing_and_leading_space():
150 |
151 |     """Trailing and leading space."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
152 |
153 |     pass
help: Remove blank line(s) before function docstring
    |
149 | def trailing_and_leading_space():
    -
150 |     """Trailing and leading space."""

D201 [*] No blank lines allowed before function docstring (found 1)
   --> D.py:546:5
544 |   def multiline_leading_space():
545 |
546 | /     """Leading space.
547 | |
548 | |     More content.
549 | |     """
    | |_______^
help: Remove blank line(s) before function docstring
    |
544 | def multiline_leading_space():
    -
545 |     """Leading space.
    |

D201 [*] No blank lines allowed before function docstring (found 1)
   --> D.py:568:5
    |
566 |   def multiline_trailing_and_leading_space():
567 |
568 | /     """Trailing and leading space.
569 | |
570 | |     More content.
571 | |     """
    | |_______^
572 |
573 |       pass
help: Remove blank line(s) before function docstring
    |
566 | def multiline_trailing_and_leading_space():
    -
567 |     """Trailing and leading space.
    |

D201 No blank lines allowed before function docstring (found 1)
   --> D.py:729:5
    |
727 | def line_continuation_chars():\
728 |
729 |     """No fix should be offered for D201/D202 because of the line continuation chars."""\
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
730 |
731 |     ...
help: Remove blank line(s) before function docstring
