crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D202_D202.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D202 [*] No blank lines allowed after function docstring (found 2)
  --> D202.py:57:5
55 | # D202
56 | def outer():
57 |     """This is a docstring."""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Remove blank line(s) after function docstring
   |
57 |     """This is a docstring."""
   -
   -
58 |     def inner():
   |

D202 [*] No blank lines allowed after function docstring (found 2)
  --> D202.py:68:5
66 | # D202
67 | def outer():
68 |     """This is a docstring."""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Remove blank line(s) after function docstring
   |
68 |     """This is a docstring."""
   -
   -
69 |     # This is a comment.
   |

D202 [*] No blank lines allowed after function docstring (found 1)
  --> D202.py:80:5
   |
78 | # D202
79 | def outer():
80 |     """This is a docstring."""
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
81 |
82 |     # This is a comment.
help: Remove blank line(s) after function docstring
   |
80 |     """This is a docstring."""
   -
81 |     # This is a comment.
   |
