crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D203_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D203 [*] 1 blank line required before class docstring
   --> D.py:161:5
    |
160 | class LeadingSpaceMissing:
161 |     """Leading space missing."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Insert 1 blank line before class docstring
    |
160 | class LeadingSpaceMissing:
161 +
162 |     """Leading space missing."""
    |

D203 [*] 1 blank line required before class docstring
   --> D.py:192:5
    |
191 | class LeadingAndTrailingSpaceMissing:
192 |     """Leading and trailing space missing."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
193 |     pass
help: Insert 1 blank line before class docstring
    |
191 | class LeadingAndTrailingSpaceMissing:
192 +
193 |     """Leading and trailing space missing."""
    |

D203 [*] 1 blank line required before class docstring
   --> D.py:526:5
    |
524 |   # parameters as functions for Google / Numpy conventions.
525 |   class Blah:  # noqa: D203,D213
526 | /     """A Blah.
527 | |
528 | |     Parameters
529 | |     ----------
530 | |     x : int
531 | |
532 | |     """
    | |_______^
533 |
534 |       def __init__(self, x):
help: Insert 1 blank line before class docstring
    |
525 | class Blah:  # noqa: D203,D213
526 +
527 |     """A Blah.
    |

D203 [*] 1 blank line required before class docstring
   --> D.py:649:5
    |
648 | class StatementOnSameLineAsDocstring:
649 |     "After this docstring there's another statement on the same line separated by a semicolon." ; priorities=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
650 |     def sort_services(self):
651 |         pass
help: Insert 1 blank line before class docstring
648 | class StatementOnSameLineAsDocstring:
649 +
650 |     "After this docstring there's another statement on the same line separated by a semicolon." ; priorities=1
    |

D203 [*] 1 blank line required before class docstring
   --> D.py:654:5
    |
653 | class StatementOnSameLineAsDocstring:
654 |     "After this docstring there's another statement on the same line separated by a semicolon."; priorities=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Insert 1 blank line before class docstring
    |
653 | class StatementOnSameLineAsDocstring:
654 +
655 |     "After this docstring there's another statement on the same line separated by a semicolon."; priorities=1
    |

D203 [*] 1 blank line required before class docstring
   --> D.py:658:5
    |
657 | class CommentAfterDocstring:
658 |     "After this docstring there's a comment."  # priorities=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
659 |     def sort_services(self):
660 |         pass
help: Insert 1 blank line before class docstring
    |
657 | class CommentAfterDocstring:
658 +
659 |     "After this docstring there's a comment."  # priorities=1
    |
