crates/ruff_linter/src/rules/pydocstyle/snapshots/ruff_linter__rules__pydocstyle__tests__D204_D.py.snap
---
source: crates/ruff_linter/src/rules/pydocstyle/mod.rs
---
D204 [*] 1 blank line required after class docstring
   --> D.py:181:5
    |
179 | class TrailingSpace:
180 |
181 |     """TrailingSpace."""
    |     ^^^^^^^^^^^^^^^^^^^^
182 |     pass
help: Insert 1 blank line after class docstring
    |
181 |     """TrailingSpace."""
182 +
183 |     pass
    |

D204 [*] 1 blank line required after class docstring
   --> D.py:192:5
    |
191 | class LeadingAndTrailingSpaceMissing:
192 |     """Leading and trailing space missing."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
193 |     pass
help: Insert 1 blank line after class docstring
    |
192 |     """Leading and trailing space missing."""
193 +
194 |     pass
    |

D204 [*] 1 blank line required after class docstring
   --> D.py:649:5
    |
648 | class StatementOnSameLineAsDocstring:
649 |     "After this docstring there's another statement on the same line separated by a semicolon." ; priorities=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
650 |     def sort_services(self):
651 |         pass
help: Insert 1 blank line after class docstring
648 | class StatementOnSameLineAsDocstring:
    -     "After this docstring there's another statement on the same line separated by a semicolon." ; priorities=1
649 +     "After this docstring there's another statement on the same line separated by a semicolon."
650 +
651 +     priorities=1
652 |     def sort_services(self):

D204 [*] 1 blank line required after class docstring
   --> D.py:654:5
    |
653 | class StatementOnSameLineAsDocstring:
654 |     "After this docstring there's another statement on the same line separated by a semicolon."; priorities=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Insert 1 blank line after class docstring
    |
653 | class StatementOnSameLineAsDocstring:
    -     "After this docstring there's another statement on the same line separated by a semicolon."; priorities=1
654 +     "After this docstring there's another statement on the same line separated by a semicolon."
655 +
656 +     priorities=1
657 |
    |

D204 [*] 1 blank line required after class docstring
   --> D.py:658:5
    |
657 | class CommentAfterDocstring:
658 |     "After this docstring there's a comment."  # priorities=1
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
659 |     def sort_services(self):
660 |         pass
help: Insert 1 blank line after class docstring
    |
658 |     "After this docstring there's a comment."  # priorities=1
659 +
660 |     def sort_services(self):
    |
